--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive: ^2.2.3
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
