--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
   hive_flutter: ^1.1.0
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
