--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   hive_flutter: ^1.1.0
   image: ^4.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
